--- a/haveaseat/pubspec.yaml
+++ b/haveaseat/pubspec.yaml
@@ -61,6 +61,7 @@ dev_dependencies:
   table_calendar:
   flutter_riverpod:
   file_picker:
+  uuid:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
